cmake_minimum_required(VERSION 3.17)
project(Exam_IParcial)

set(CMAKE_CXX_STANDARD 20)

add_executable(Exam_IParcial main.cpp Sala.cpp Sala.h Pelicula.cpp Pelicula.h Funcion.cpp Funcion.h Cartelera.cpp Cartelera.h Lente3D.cpp Lente3D.h Nodo.cpp Nodo.h Lista.cpp Lista.h Matrix.cpp Matrix.h Asiento.cpp Asiento.h Fecha.cpp Fecha.h Control.cpp Control.h)